Fix text align. when no txt nodes are wide as the c'tainer (closes #464)

--- a/app/assets/stylesheets/training_modules/_slides.styl
+++ b/app/assets/stylesheets/training_modules/_slides.styl
@@ -12,6 +12,9 @@
   margin-bottom 30px
   display table
   table-layout fixed
+  width $slide_inner_content_width
+  +below(desktop)
+    width 100%
 
 .training__slide .h3
   margin-bottom 21px
